# TransBench

./: .gitignore  LICENSE  NOTES.md  README.md  pyproject.toml
benchmarks/: benchmarks.amig.toml  benchmarks.amig_p95_retry.toml  benchmarks.cpu.toml  benchmarks.cuda.toml  benchmarks.example.toml  benchmarks.mig_cuda.toml  benchmarks.mig_dev.toml  benchmarks.mig_poison_sweep.toml
dashboard/: app.js  index.html  styles.css
doc/: RecurentHyperNetworks.md  TRANSFORMER_VARIENTS.md
notebooks/: Benchmark.ipynb
scripts/: compare_mig_advantage.py  compare_real.py  full_analysis.py  run_cpu_long.sh  run_cuda_sm61.sh  smoke_cuda.py  start_cpu_long.sh  stop_cpu_long.sh  tail_cpu_long.sh
scripts/analysis/: analyze_results.py  aux_analysis.py  check_aux.py  deep_analysis.py  gate_analysis.py  gate_quick.py  suitability_assessment.py
src/transbench/: benchmark.py  clean.py  cli.py  datasets.py  reporting.py  suite.py
src/transbench/modules/: __init__.py  archi_modules.py  asr_module.py  ffn_modules.py  mig_module.py  mixin_modules.py  positionnal_modules.py  sil_module.py
src/transbench/utils/: __init__.py  lightning_utils.py  lightning_utils_fp8.py  train_utils.py
tests/: _check_gate_init.py  _check_mig_perhead.py  _gpu_check.py  _smoke_asr.py  _smoke_sil.py  conftest.py  test_benchmark_smoke.py  test_clean.py  test_cli_all_incremental.py  test_optional_fla.py  test_reporting.py  test_suite_config.py
